# DecisionFramework_HE_HHE

./: .gitignore  README.md
Client/: CMakeLists.txt  mainClient.cpp
Data_Manager/: data_manager.cpp  data_manager.h
Key_Manager/: CMakeLists.txt  key_main.cpp  key_storage.cpp  key_storage.h  send_keys.txt
Parameters/: parameters.cpp  parameters.h
Performance_Measurement/: analyse_memory_graph.py  analyse_time_memory.py  timewriter.cpp  timewriter.h
Server/: CMakeLists.txt  mainServer.cpp
TTP/: CMakeLists.txt  mainTTP.cpp
